added updated external snctools + added fix for old matlab versions < 2006a: default to java for reading local netcdf files, writing of netcdf not possible though due to compatible mexnc.
svn path=/trunk/matlab/; revision=3301


Former-commit-id: 9fc9b119f68b1329de786a8f146de2dc443150aa

--- a/io/netcdf/snctools/src/makefile
+++ b/io/netcdf/snctools/src/makefile
@@ -1,3 +1,5 @@
+# The CLASSPATH environment variable must be defined in order
+# for this to compile.
 all:
 	javac SncCreds.java
 	mv SncCreds.class  ../classes
