--- a/websites/dataviewer/dotnet/VS/BwnFunctions/BwnMatLab/BwnMatLab.csproj
+++ b/websites/dataviewer/dotnet/VS/BwnFunctions/BwnMatLab/BwnMatLab.csproj
@@ -36,7 +36,7 @@
     </Reference>
     <Reference Include="MWArray, Version=2.10.1.0, Culture=neutral, PublicKeyToken=e1d84a0da19db86f, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\TempCompile\MWArray.dll</HintPath>
+      <HintPath>..\..\..\BwnFunctions2DotNET\MWArray.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
