lots of GUI stuff fixed
svn path=/trunk/matlab/; revision=4006


Former-commit-id: 98ab0fec1b6891ca56f73939ced26a7b5578ef48

--- a/applications/DelftDashBoard/DelftDashBoard.ini
+++ b/applications/DelftDashBoard/DelftDashBoard.ini
@@ -1,2 +1,3 @@
 % Data directories
-DataDir=data\
+DataDir=E:\work\delftdashboard\data\
+AdditionalToolboxDir=E:\work\ddb_additionalToolboxes\toolboxes\
