--- a/applications/DelftDashBoard/DelftDashBoard.ini
+++ b/applications/DelftDashBoard/DelftDashBoard.ini
@@ -1,3 +1,3 @@
 % Data directories
-DataDir=E:\work\delftdashboard\data\
-AdditionalToolboxDir=E:\work\ddb_additionalToolboxes\toolboxes\
+DataDir=F:\delftdashboard\data\
+% AdditionalToolboxDir=E:\work\ddb_additionalToolboxes\toolboxes\
