--- a/applications/DelftDashBoard/DelftDashBoard.ini
+++ b/applications/DelftDashBoard/DelftDashBoard.ini
@@ -1,3 +1,3 @@
 % Data directories
-DataDir=D:\work\checkouts\OpenEarthTools\trunk\matlab\applications\DelftDashBoard\data\
-% AdditionalToolboxDir=E:\work\ddb_additionalToolboxes\toolboxes\
+DataDir=F:\delftdashboard\data\
+AdditionalToolboxDir=F:\checkout\delftdashboard_local\toolboxes\
