svn path=/trunk/matlab/; revision=4664
Former-commit-id: 6ede1d1715d62f846f68cc6a5a85ab5873aa3dfc

--- a/applications/googleplot/KMLengines/.gitignore
+++ b/applications/googleplot/KMLengines/.gitignore
@@ -1,1 +1,9 @@
 /*.asv
+/KML_colorbar_template_horizontal.png
+/KML_colorbar_template_horizontal.psd
+/KML_colorbar_template_horizontal_Ecoshape.png
+/KML_colorbar_template_horizontal_Ecoshape.psd
+/KML_colorbar_template_vertical.png
+/KML_colorbar_template_vertical.psd
+/KML_colorbar_template_vertical_Ecoshape.png
+/KML_colorbar_template_vertical_Ecoshape.psd
