--- a/applications/DelftDashBoard/DelftDashBoard.ini
+++ b/applications/DelftDashBoard/DelftDashBoard.ini
@@ -1,3 +1,3 @@
 % Data directories
-DataDir=F:\delftdashboard\data\
-AdditionalToolboxDir=F:\checkout\delftdashboard_local\toolboxes\
+DataDir=D:\checkouts\oetools\applications\DelftDashBoard\data\
+AdditionalToolboxDir=D:\checkouts\vomsc\DelftDashboard\toolboxes\
