airOut and heaOut added to mdf
svn path=/trunk/matlab/; revision=4833


Former-commit-id: cdfb3bb1c1f96e9adaa027d1dcbfd14f410b6f5c

--- a/applications/DelftDashBoard/DelftDashBoard.ini
+++ b/applications/DelftDashBoard/DelftDashBoard.ini
@@ -1,3 +1,2 @@
 % Data directories
-DataDir=D:\checkouts\oetools\applications\DelftDashBoard\data\
-AdditionalToolboxDir=D:\checkouts\vomsc\DelftDashboard\toolboxes\
+DataDir=D:\work\delftdashboard\data\
