mostly filename changes in cosmos
svn path=/trunk/matlab/; revision=4925


Former-commit-id: 80d2c7c1d4f95faaef646156028a0980fcfbebcc

--- a/applications/cosmos/code/OMSRunner/omsconfig.ini
+++ b/applications/cosmos/code/OMSRunner/omsconfig.ini
@@ -3,7 +3,7 @@ MainDirectory     "F:\OperationalModelSystem\SoCalCoastalHazards\"
 #JobDirectory      "P:\z4394-micore\OperationalModelSystem\jobs\winterstorm02\"
 #JobDirectory      "P:\z4394-micore\OperationalModelSystem\jobs\"
 JobDirectory      "P:\1201423-santa-cruz-harbor\oms\jobs\"
-WebDirectory      "F:\OperationalModelSystem\SoCalCoastalHazards\website\"
+WebDirectory      "D:\checkouts\OpenEarthTools\websites\cosmos\htdocs\"
 Scenario          "forecasts"
 #Scenario          "arkstorm"
 #Scenario          "jan2010"
