nefis.ini merged with version of Bert Jagers
svn path=/trunk/matlab/; revision=5482


Former-commit-id: 8016cb4778d9fc3a1ed5f90ea2fb0ecdbfd617b0

--- a/applications/delft3d/nefis.ini
+++ b/applications/delft3d/nefis.ini
@@ -1,8 +1,8 @@
 [General]
-  version = 2.04
-  date    = May 24, 2007
-  attc:institution = WL | Delft Hydraulics
-  attc:references = http://www.wldelft.nl
+  version = 2.05
+  date    = March 19, 2010
+  attc:institution = Deltares
+  attc:references = http://www.deltares.nl
   attc:Comment = Comment read from nefis.ini
 ===============================================================================
 [filetype]
@@ -88,8 +88,8 @@
   Group   = FLOW-MAP-GROUP
 ===============================================================================
 [General]
-  attc:institution = WL | Delft Hydraulics
-  attc:references = http://www.wldelft.nl
+  attc:institution = Deltares
+  attc:references = http://www.deltares.nl
   attc:Comment = Comment read from nefis.ini
 ===============================================================================
 [SOBEK-output:Group:FLOW-MAP-GROUP]
@@ -725,6 +725,15 @@
   Dimension2 = M
   Dimension3 = Layer
   DimOrder   = 3 2 1
+[Delft3D-trim:Virtual:density]
+  Type       = alias
+  Requires1  = map-series:RHO
+  DimOrder   = 3 2 1
+  Include1   = zgrid3
+  attc:long_name = density
+  attc:standard_name = sea_water_density
+  attc:units = kg m-3
+  attc:coordinates = zgrid_y zgrid_x
 [Delft3D-trim:Element:UMNLDF]
   Dimension1 = N
   Dimension2 = M
