Delete password and username
svn path=/trunk/matlab/; revision=6677


Former-commit-id: f24b23723d257e1b66332a0b6e5800b04184e064

--- a/applications/cosmos/code/cosmos.ini
+++ b/applications/cosmos/code/cosmos.ini
@@ -3,8 +3,8 @@ DataDirectory    F:\OpenEarthTools\data\cosmos\
 JobDirectory     p:\1205045-monitoring-zandmotor\Zwemveiligheid\Zandmotor\Model\Jobs\
 WebDirectory     c:\xampp\htdocs\
 H4Directory      /p/1205045-monitoring-zandmotor/Zwemveiligheid/Zandmotor/Model/Jobs/
-H4UserName       swinkel
-H4Password       3ng#land
+H4UserName       
+H4Password       
 Scenario         zandmotor03
 eMailOnError     0
 eMailAdress      Maarten.vanOrmondt@deltares.nl
